add eval for program 4

--- a/intro_lc.ipynb
+++ b/intro_lc.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
     ")\n",
     "\n",
     "chain = LLMChain(llm=llm, prompt=first_hop_prompt)\n",
-    "completion = chain.run(dev[2]['question'])"
+    "completion_first_hop = chain.run(dev[2]['question'])"
    ]
   },
   {
@@ -896,7 +896,7 @@
     {
      "data": {
       "text/plain": [
-       "' the artist behind the song \"Right Back At It Again\".\\nSearch Query: Who wrote the song \"Right Back At It Again\"?'"
+       "' which singer co-wrote the lyrics to \"Right Back At It Again\".\\nSearch Query: Who co-wrote the lyrics to \"Right Back At It Again\"?'"
       ]
      },
      "execution_count": 5,
@@ -905,7 +905,7 @@
     }
    ],
    "source": [
-    "completion"
+    "completion_first_hop"
    ]
   },
   {
@@ -916,7 +916,7 @@
     {
      "data": {
       "text/plain": [
-       "'Who wrote the song \"Right Back At It Again\"?'"
+       "'Who co-wrote the lyrics to \"Right Back At It Again\"?'"
       ]
      },
      "execution_count": 6,
@@ -925,8 +925,8 @@
     }
    ],
    "source": [
-    "retrieval_question = completion.split('\\n')[-1].split(':')[-1].strip()\n",
-    "retrieval_question"
+    "retrieval_question_first_hop = completion_first_hop.split('\\n')[-1].split(':')[-1].strip()\n",
+    "retrieval_question_first_hop"
    ]
   },
   {
@@ -945,6 +945,9 @@
       "\n",
       "Follow the following format.\n",
       "\n",
+      "Context:\n",
+      "$[sources that may contain relevant content]\n",
+      "\n",
       "Question: $[the question to be answered]\n",
       "Rationale: Let's think step by step. Based on the context, we have learned the following. $[information from the context that provides useful clues]\n",
       "Search Query: $[a simple question for seeking the missing information]\n",
@@ -961,6 +964,23 @@
     }
    ],
    "source": [
+    "def format_context_for_prompt(context):\n",
+    "    \"\"\"\n",
+    "    Format and enumerate a list of context strings for use in a prompt.\n",
+    "    \"\"\"\n",
+    "    return '\\n'.join([f'[{i+1}] {c}' for i, c in enumerate(context)])\n",
+    "\n",
+    "\n",
+    "def extract_last_line(completion, remove_prefix=True):\n",
+    "    \"\"\"\n",
+    "    Extract the last line of a completion, optionally removing the prefix.\n",
+    "    \"\"\"\n",
+    "    last_line = completion.split('\\n')[-1].strip()\n",
+    "    if remove_prefix:\n",
+    "        last_line = last_line.split(':')[-1].strip()\n",
+    "    return last_line\n",
+    "\n",
+    "\n",
     "search_retrieval_template_second_hop = \"\"\"\n",
     "Write a search query that will help answer a complex question.\n",
     "\n",
@@ -983,8 +1003,8 @@
     "Question: {question}\n",
     "Rationale: Let's think step by step. Based on the context, we have learned the following.\"\"\"\n",
     "\n",
-    "context = rm(retrieval_question, k=2)\n",
-    "context = '\\n'.join([f'[{i+1}] {c}' for i, c in enumerate(context)])\n",
+    "context = rm(retrieval_question_first_hop, k=2)\n",
+    "context = format_context_for_prompt(context)\n",
     "\n",
     "second_hop_prompt = PromptTemplate(\n",
     "    input_variables=['context', 'question'],\n",
@@ -992,6 +1012,139 @@
     ")\n",
     "\n",
     "print(second_hop_prompt.format(context=context, question=dev[2]['question']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' The singer of Right Back At It Again is Jeremy McKinnon and he co-wrote the lyrics.\\n\\nSearch Query: \"Jeremy McKinnon\" birthplace'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain = LLMChain(llm=llm, prompt=second_hop_prompt)\n",
+    "completion_second_hop = chain.run(context=context, question=dev[2]['question'])\n",
+    "completion_second_hop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"Jeremy McKinnon\" birthplace'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retrieval_question_second_hop = completion_second_hop.split('\\n')[-1].split(':')[-1].strip()\n",
+    "retrieval_question_second_hop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefix = \"\"\"\n",
+    "Answer questions with short factoid answers.\n",
+    "\"\"\"\n",
+    "\n",
+    "suffix = \"\"\"\n",
+    "---\n",
+    "\n",
+    "Follow the following format.\n",
+    "\n",
+    "Context:\n",
+    "$[sources that may contain relevant content]\n",
+    "\n",
+    "Question: $[the question to be answered]\n",
+    "\n",
+    "Rationale: Let's think step by step. $[a step-by-step deduction that identifies the correct response, which will be provided below]\n",
+    "\n",
+    "Answer: $[a short factoid answer, often between 1 and 5 words]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Context:\n",
+    "{context}\n",
+    "\n",
+    "Question: {question}\n",
+    "\n",
+    "Rationale: Let's think step by step.\"\"\"\n",
+    "\n",
+    "context = rm(retrieval_question_second_hop, k=2)\n",
+    "context = format_context_for_prompt(context)\n",
+    "\n",
+    "rationale_prompt = FewShotPromptTemplate(\n",
+    "    examples=train,\n",
+    "    example_prompt=example_prompt,\n",
+    "    prefix=prefix,\n",
+    "    suffix=suffix,\n",
+    "    input_variables=['context', 'question'],\n",
+    "    example_separator=''\n",
+    ")\n",
+    "\n",
+    "chain = LLMChain(llm=llm, prompt=rationale_prompt)\n",
+    "final_completion = chain.run(context=context, question=dev[2]['question'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" First, let's consider the provided context. We are told that Jeremy McKinnon is the singer in A Day to Remember, which is a band he founded. We are also informed that he is an American musician and record producer. We can deduce from this that the song Right Back At It Again is a song by A Day to Remember, and that Jeremy McKinnon would have co-written the lyrics. Then, we check the first source to see where Jeremy McKinnon was born - Gainesville, Florida. \\n\\nAnswer: Gainesville, Florida\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_completion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Gainesville, Florida'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer = final_completion.split('\\n')[-1].split(':')[-1].strip()\n",
+    "answer"
    ]
   },
   {
